--- a/react-ts-app/package.json
+++ b/react-ts-app/package.json
@@ -11,6 +11,7 @@
     "@types/react-redux": "^7.0.9",
     "@types/react-router-dom": "^4.3.3",
     "@types/redux": "^3.6.0",
+    "immer": "^3.1.3",
     "marked": "^0.6.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -19,6 +20,7 @@
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
+    "redux-starter-kit": "^0.5.1",
     "redux-thunk": "^2.3.0",
     "typescript": "^3.5.1"
   },
