--- a/react-ts-app/package.json
+++ b/react-ts-app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/d3": "^5.7.2",
     "@types/jest": "^24.0.13",
     "@types/marked": "^0.6.5",
     "@types/node": "^12.0.7",
@@ -11,8 +12,9 @@
     "@types/react-redux": "^7.0.9",
     "@types/react-router-dom": "^4.3.3",
     "@types/redux": "^3.6.0",
+    "d3": "^5.9.7",
     "immer": "^3.1.3",
-    "marked": "^0.6.2",
+    "marked": "^0.7.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
