--- a/react-ts-app/package.json
+++ b/react-ts-app/package.json
@@ -16,6 +16,7 @@
     "immer": "^3.1.3",
     "marked": "^0.7.0",
     "react": "^16.8.6",
+    "react-addons-pure-render-mixin": "^15.6.2",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.1",
