--- a/react-ts-app/package.json
+++ b/react-ts-app/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage" : "http://tysisnice.github.io/portfolio",
+  "homepage": "http://tysisnice.github.io/portfolio",
   "name": "react-ts-app",
   "version": "0.1.0",
   "private": true,
@@ -29,6 +29,8 @@
     "typescript": "^3.5.1"
   },
   "scripts": {
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -48,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
   }
 }
