--- a/react-ts-app/package.json
+++ b/react-ts-app/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://tysisnice.github.io/portfolio",
+//  "homepage": "http://tysisnice.github.io/portfolio",
   "name": "react-ts-app",
   "version": "0.1.0",
   "private": true,
